--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,4 @@ dmypy.json
 
 # ignore TODO from MISVIK
 Misvik_Bayeas_model/MISVIK_Finish/Raport/TODO
+Misvik_Bayeas_model/MISVIK_Finish/Raport/QSAR_lab_modelling_RESULTS_20220113.docx
